welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:13: error: Unmatched closing brace '}' ignored here
 }
 ^